Closed
Bug 1248352
Opened 9 years ago
Closed 9 years ago
js shell asserts on illegal option
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla47
Tracking | Status | |
---|---|---|
firefox47 | --- | fixed |
People
(Reporter: lth, Assigned: jonco)
References
Details
Attachments
(1 file)
1.34 KB,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
$ dist/bin/js --gczeal=2 ~/moz/ta.js
Error: Invalid long option: --gczeal=2
[[ Help text is printed ]]
Assertion failure: !isspace(*it), at /home/lhansen/moz/mozilla-inbound/js/src/shell/jsoptparse.cpp:98
Segmentation fault
Reporter | ||
Comment 1•9 years ago
|
||
Well, asserts -- but still not terribly desirable.
Summary: js shell segfaults on illegal option → js shell asserts on illegal option
Assignee | ||
Comment 2•9 years ago
|
||
It seems the option parsing code can't handle blank lines in help text. This patch relaxes some assertions which makes things work, although the text is still slightly mangled.
Assignee: nobody → jcoppeard
Attachment #8723635 -
Flags: review?(jdemooij)
Comment 3•9 years ago
|
||
Comment on attachment 8723635 [details] [diff] [review]
bug1248352-shell-help
Review of attachment 8723635 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks.
Attachment #8723635 -
Flags: review?(jdemooij) → review+
Comment 5•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox47:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in
before you can comment on or make changes to this bug.
Description
•