Bug 1248352 - Allow shell option parsing code to handle help text containing blank lines r=jandem